# docstring-generation

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
autoDoc/: common.py  config.py  dataset_utils.py  evaluate.py  evaluate_model.py  grpo.py  metrics.py  prompts.py  rewards.py  sft.py  train.py
data/: config_grpo.yaml
lessons/: lesson-1-introduction.md  lesson-2-data-preparation.md  lesson-3-sft.md  lesson-4-grpo.md  lesson-5-evaluation.md
tests/: test_dataset.py
