[project]
name = "autoDoc"
version = "0.1.0"
description = "Finetune language models for docstring generation"
authors = [
    {name = "Amal Feriani"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "modal>=0.60.0",
    "datasets>=4.2.0",
    "torch>=2.8.0",
    "bert-score>=0.3.13",
    "evaluate>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoDoc"]
